feat: add use case + handler for registering/unregistering streams
