# docs/swagger.yaml
@@ -12,6 +12,11 @@ definitions:
       message:
         type: string
     type: object
+  http.SuccessResponse:
+    properties:
+      success:
+        type: boolean
+    type: object
 host: localhost:7000
 info:
   contact:
@@ -50,7 +55,35 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/http.ErrorResponse'
-      summary: register a log stream
+      summary: register a logstream
+      tags:
+      - logstream
+  /stream/unregister:
+    post:
+      consumes:
+      - application/json
+      description: delete a logstream an close all open connection to it
+      operationId: unregister-stream
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/http.SuccessResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/http.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/http.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.ErrorResponse'
+      summary: unregister a logstream
       tags:
       - logstream
 swagger: "2.0"
