# logstream/delivery/http/logstream_handler.go
@@ -15,8 +15,16 @@ type RegisterRequest struct {
 	Alias string `json:"alias"`
 }
 
+type UnregisterRequest struct {
+	ID string `json:"id"`
+}
+
 type ErrorResponse struct {
 	Message string `json:"message"`
+}
+
+type SuccessResponse struct {
+	Success bool `json:"success"`
 }
 
 func NewLogStreamHandler(app *fiber.App, us domain.LogStreamUseCase) {
@@ -58,6 +66,39 @@ func (h *LogStreamHttpHandler) RegisterStream(c *fiber.Ctx) error {
 	}
 
 	c.JSON(stream)
+	return c.SendStatus(http.StatusOK)
+}
+
+// Unregister Streams godoc
+// @ID unregister-stream
+// @Router /stream/unregister [post]
+// @Tags logstream
+// @Description delete a logstream an close all open connection to it
+// @Summary unregister a logstream
+// @Accept json
+// @Produce json
+// @Success 200 {object} SuccessResponse
+// @Failure 409 {object} ErrorResponse
+// @Failure 422 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+func (h *LogStreamHttpHandler) UnregisterStream(c *fiber.Ctx) error {
+	ctx := c.Context()
+	payload := UnregisterRequest{}
+
+	if err := c.BodyParser(&payload); err != nil {
+		c.JSON(ErrorResponse{err.Error()})
+		return c.SendStatus(http.StatusUnprocessableEntity)
+	}
+
+	//TODO: validate
+
+	err := h.useCase.UnregisterStream(ctx, payload.ID)
+	if err != nil {
+		c.JSON(ErrorResponse{err.Error()})
+		return c.SendStatus(getStatusCode(err))
+	}
+
+	c.JSON(SuccessResponse{true})
 	return c.SendStatus(http.StatusOK)
 }
 
